syntax = "proto3";

package rpcdemoproto;

service HeartBeatService {
    rpc KeepHearBeat (AppendEntriesRequest) returns (AppendEntriesResponse);
}
service AppendEntriesService {
    rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
}
service VoteService {
    rpc Vote (VoteRequest) returns (VoteResponse);
}

message AppendEntriesRequest {
    uint64 term = 1;
    uint64 leaderId = 2;
    repeated string log = 3;
}
message AppendEntriesResponse {
    uint64 term = 1;
    bool success = 2;
}

message VoteRequest {
    uint64 term = 1;
    uint64 candidateId = 2;
}
message VoteResponse {
    uint64 term = 1;
    bool voteGranted = 2;
}